--- a/pages/Javascript.new folder/dataType/number/exercise-3.html
+++ b/pages/Javascript.new folder/dataType/number/exercise-3.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-        bodu {
+        body {
             margin: 0;
             padding: 0;
         }
@@ -21,7 +21,9 @@
             flex-direction: column;
            
         }
-
+        h1 {
+                color: rgb(0, 119, 255);
+            }
         .main-box {
             height: 60%;
             width: 33%;
@@ -38,7 +40,7 @@
             background-color: rgb(255, 255, 255);
             box-shadow: 0px 4px 30px 0px rgba(0, 0, 0, 0.326);
             font-size: 30px;
-            color: blue;
+            color: rgb(0, 119, 255);
             display: flex;
             justify-content: center;
             align-items: center;
@@ -69,7 +71,86 @@
             border: none;color: rgb(0, 0, 0);
             margin-left: 40px;
             font-size: 20px;
-            border-radius: 10px;
+            border-radius: 5px;
+        }
+        @media (min-width:300px) and (max-width:450px) {
+            body {
+                margin: 0;
+                padding: 0;
+            }
+
+            .main-container {
+                height: 100vh;
+                width: 100vw;
+                background-color: rgb(255, 255, 255);
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                flex-direction: column;
+                font-family: Verdana, Geneva, Tahoma, sans-serif;
+
+            }
+
+            h1 {
+                color: rgb(0, 119, 255);
+            }
+
+            .main-box {
+                height: 100vh;
+                width: 100%;
+                background-color: rgb(255, 255, 255);
+                box-shadow: 0px 4px 30px 0px rgba(0, 0, 0, 0.187);
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                flex-direction: column;
+                border: 1px solid rgb(208, 208, 208);
+            }
+
+            .display {
+                height: 80px;
+                width: 90%;
+                background-color: rgb(255, 255, 255);
+                box-shadow: 0px 4px 30px 0px rgba(0, 0, 0, 0.326);
+                font-size: 30px;
+                color: blue;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+
+            }
+
+            h1 {
+                font-size: 25px;
+            }
+
+            input {
+                width: 85%;
+                height: 26px;
+            }
+
+            .button-group {
+                height: 20%;
+                width: 90%;
+                background-color: rgb(255, 255, 255);
+                box-shadow: 0px 4px 30px 0px rgba(0, 0, 0, 0.201);
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+
+            }
+
+            button {
+                height: 40px;
+                width: 35%;
+                background-color: rgb(11, 212, 27);
+                box-shadow: 0px 4px 30px 0px rgba(0, 0, 0, 0.201);
+                border: none;
+                color: rgb(0, 0, 0);
+                margin-left: 40px;
+                font-size: 24px;
+                border-radius: 10px;
+            }
         }
     </style>
 </head>
@@ -77,42 +158,42 @@
 <body>
     <div class="main-container">
         <div class="main-box">
-            <h1>All Sum</h1>
-            <div id="display" class="display">Output</div>
+            <h1>Math Operation Calculator</h1>
+            <div id="display" class="display"></div>
             <h3>First Number</h3>
             <input id="input-one" type="text" placeholder="Enter a Number ... ">
             <h3>Second Number</h3>
             <input id="input-two" type="text" placeholder="Enter a Number ...">
             <br>
             <div class="button-group">
-                <span> <button onclick="buttonone()">Add</button> <button onclick="buttontwo()">Multi</button></span>
+                <span> <button onclick="buttonone()">Add (﹢)</button> <button onclick="buttontwo()">Multi   (×)</button></span>
                 <br>
-                <span> <button onclick="buttonthree()">Sub</button> <button onclick="buttonfour()">Div</button></span>
+                <span> <button onclick="buttonthree()">Sub (−)</button> <button onclick="buttonfour()">Div (÷)</button></span>
             </div>
         </div>
     </div>
     <script>
         function buttonone() {
-            let sum1 = Number(document.getElementById("input-one").value);
-            let sum2 = Number(document.getElementById("input-two").value);
+            let sum1 = document.getElementById("input-one").value;
+            let sum2 = document.getElementById("input-two").value;
             let sum = Number(sum1) + Number(sum2)
             document.getElementById("display").innerHTML = "The sum of :" + sum;
         }
         function buttontwo() {
-            let mult1 = Number(document.getElementById("input-one").value);
-            let mult2 = Number(document.getElementById("input-two").value);
-            let mult = Number(mult1) * Number(mult2)
-            document.getElementById("display").innerHTML = "The sum of :"+ mult;
+            let sum1 = document.getElementById("input-one").value;
+            let sum2 = document.getElementById("input-two").value;
+            let sum = Number(sum1) * Number(sum2)
+            document.getElementById("display").innerHTML = "The sum of :"+ sum;
         }
         function buttonthree() {
-            let sum1 = Number(document.getElementById("input-one").value);
-            let sum2 = Number(document.getElementById("input-two").value);
+            let sum1 = document.getElementById("input-one").value;
+            let sum2 = document.getElementById("input-two").value;
             let sum = Number(sum1) - Number(sum2)
             document.getElementById("display").innerHTML = "The sum of :" + sum;
         }
         function buttonfour(){
-            let sum1 = Number (document.getElementById("input-one").value);
-            let sum2 = Number (document.getElementById("input-two").value);
+            let sum1 = document.getElementById("input-one").value;
+            let sum2 = document.getElementById("input-two").value;
             let sum = Number (sum1)/Number(sum2)
             document.getElementById("display").innerHTML = "The sum of :" +sum ;
         }
