--- a/pages/Javascript.new folder/dataType/number/exercise-7.html
+++ b/pages/Javascript.new folder/dataType/number/exercise-7.html
@@ -24,14 +24,14 @@
             align-items: center;
             border: 1px solid gainsboro;
         }
-        h1{
+        h2{
             color: #1C352D;
         }
         .circle{
             height: 20%;
             width: 23%;
-            background-color: #08CB00;  box-shadow: 0px 5px 30px 0px rgba(0, 0, 0, 0.21);
-            border-radius: 100%;
+            background-color: #ffffff;  box-shadow: 0px 5px 30px 0px rgba(0, 0, 0, 0.21);
+            border: 2px solid rgb(177, 177, 177);
         }
         p{
             height: 20%;
@@ -52,7 +52,7 @@
             height: 50px;
             width: 40%;
             font-size: 24px;
-            background-color: #ffffff;
+            background-color: #11ca00;
             border: none;
             border-radius: 7px;
             box-shadow: 0px 5px 30px 0px rgba(0, 0, 0, 0.21);
@@ -62,9 +62,9 @@
 <body>
     <div class="main-container">
         <div class="main-box">
-            <h1>Circle area Calculator</h1>
+            <h2> perimeter of Square Calculator</h2>
         <div class="circle"></div>
-        <label><h2>Enter radius of circle :</h2></label>
+        <label><h2>Side of Square</h2></label>
         <input type="number" id="input" placeholder="Enter Number ......">
         <br>
         <button onclick="calculatearea()">Calculate area</button>
@@ -78,12 +78,10 @@
         // input
         let radius = document.getElementById("input").value
         // assign
-        const pie = 3.142
-
-        // proces 
-        let area = pie * Number (radius) * Number (radius)
+        //proces 
+        let area =4 * Number (radius)
         // output
-        document.getElementById("output").innerHTML = "Area of circle is :" + area
+        document.getElementById("output").innerHTML = "Area of Square is :" + area
     }
 </script>
 </body>
